--- a/styles/style.css
+++ b/styles/style.css
@@ -124,6 +124,7 @@
     background-color: #e7e9eb;
     border: 0px;
     font-size: 16px;
+    border-radius: 0%;
 }
 
 .pay-form-input:invalid {
@@ -132,13 +133,19 @@
 
 .pay-form-btn {
     margin-top: 20px;
-    background-color: rgb(56, 120, 70, 0.5);
+    background-color: rgb(56, 120, 70, 0.9);
     color: white;
     padding: 15px;
     font-size: 16px;
     border: 0px;
+    transition: .2s ease background-color;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
+.pay-form-btn:hover {
+    background-color: rgb(56, 120, 70);
+}
 
 .our-com-p {
     color: #FF9800;
