--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,7 @@
     padding: 16px 16px 13px 16px;
     width: 100%;
     appearance: none;
-    background-image: url(/images/down.svg);
+    background-image: url(https://kurzan.github.io/pay-form/images/down.svg);
     background-size: 24px 24px;
     background-repeat: no-repeat;
     background-position: 40% center;
