--- a/styles/style.css
+++ b/styles/style.css
@@ -93,7 +93,6 @@
     margin-bottom: 15px;
 }
 
-
 .form_select {
     background-color: #e7e9eb;
     border: 0px;
@@ -245,9 +244,9 @@
     background-color: rgb(56, 120, 70, 0.8);
     text-decoration: none;
     font-size: 12px;
-    color: white;lack;
+    color: white;
     padding: 10px 20px;
-    border-radius: 30px;
+    border-radius: 6px;
     margin-top: 15px;
     margin-bottom: 10px;
     transition: .2s ease background-color, .2s ease color;
@@ -289,6 +288,56 @@
     object-fit: cover;
 }
 
+.nfkapp {
+    cursor: pointer;
+    /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.2)); */
+    background-color: #ecf1f7;
+    border-radius: 5px;
+    height: 70px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+}
+
+
+.nfkapp-cover {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    transition: .2s scale;
+    margin-right: 20px;
+}
+
+.nfkapp-cover:hover {
+    transform: scale(1.1);
+}
+
+.nfkapp-img {
+    display: block;
+    max-height: 100%;
+    max-width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    border-radius: 18%;
+}
+
+.nfkapp-text {
+    max-width: 70%;
+    padding-left: 20px;
+    font-size: 12px;
+}
+
+.nfkapp-text-mark {
+    background-color:rgb(56, 120, 70);
+    color:white;
+}
+
+
+
 @media (max-width: 1020px) {
     .pay {
         max-width: 100%;
@@ -309,5 +358,12 @@
 
     .pay-form {
         margin-bottom: 15px;
+    }
+    
+}
+
+@media (min-width: 1021px) {
+    .nfkapp {
+        display:none;
     }
 }
