--- a/styles/style.css
+++ b/styles/style.css
@@ -290,14 +290,15 @@
 
 .nfkapp {
     cursor: pointer;
-    /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.2)); */
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.2));
     background-color: #ecf1f7;
-    border-radius: 5px;
+    border-radius: 10px;
     height: 70px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items:center;
+    margin-bottom: 10px;
 }
 
 
@@ -306,7 +307,7 @@
     height: 50px;
     position: relative;
     transition: .2s scale;
-    margin-right: 20px;
+    margin-right: 5px;
 }
 
 .nfkapp-cover:hover {
@@ -327,8 +328,8 @@
 
 .nfkapp-text {
     max-width: 70%;
-    padding-left: 20px;
-    font-size: 14px;
+    padding-left: 15px;
+    font-size: 12px;
 }
 
 .nfkapp-text-mark {
@@ -357,7 +358,7 @@
     }
 
     .pay-form {
-        margin-bottom: 15px;
+        margin-bottom: 40px;
     }
     
 }
@@ -366,4 +367,5 @@
     .nfkapp {
         display:none;
     }
+    
 }
