--- a/styles/style.css
+++ b/styles/style.css
@@ -293,12 +293,13 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.2));
     background-color: #ecf1f7;
     border-radius: 10px;
-    height: 70px;
+    height: 80px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items:center;
     margin-bottom: 10px;
+    transition: .2s ease scale;
 }
 
 
@@ -306,12 +307,11 @@
     width: 50px;
     height: 50px;
     position: relative;
-    transition: .2s scale;
-    margin-right: 5px;
+    margin-right: 15px;
 }
 
-.nfkapp-cover:hover {
-    transform: scale(1.1);
+.nfkapp:active {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0));
 }
 
 .nfkapp-img {
@@ -330,12 +330,16 @@
     max-width: 70%;
     padding-left: 15px;
     font-size: 12px;
+    line-height: 1.5;
+    
 }
 
-.nfkapp-text-mark {
+/* .nfkapp-text-mark {
     background-color:rgb(56, 120, 70);
     color:white;
-}
+} */
+
+
 
 
 
