--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@
     color: black;
     padding: 15px 25px;
     box-sizing: border-box;
-    /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 2%;
     margin-bottom: 50px;
 }
